tests/invalid/ListSublist_Invalid_2.whiley

method main(System.Console sys) -> void:
    list = [1, 2, 3]
    sublist = list[1..4]
    debug Any.toString(list)
    debug Any.toString(sublist)
